--- a/app/package.json
+++ b/app/package.json
@@ -13,5 +13,12 @@
     "nuxt": "^3.15.4",
     "vue": "latest",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "@nuxt/test-utils": "^3.15.4",
+    "@vue/test-utils": "^2.4.6",
+    "happy-dom": "^16.0.0",
+    "playwright-core": "^1.50.1",
+    "vitest": "^3.0.5"
   }
 }
