--- a/app/package.json
+++ b/app/package.json
@@ -7,7 +7,8 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "test": "vitest"
   },
   "dependencies": {
     "nuxt": "^3.15.4",
@@ -16,8 +17,9 @@
   },
   "devDependencies": {
     "@nuxt/test-utils": "^3.15.4",
+    "@testing-library/vue": "^8.1.0",
     "@vue/test-utils": "^2.4.6",
-    "happy-dom": "^16.0.0",
+    "happy-dom": "^16.8.1",
     "playwright-core": "^1.50.1",
     "vitest": "^3.0.5"
   }
