--- a/app/package.json
+++ b/app/package.json
@@ -8,7 +8,8 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "test": "vitest"
+    "test": "vitest",
+    "e2e": "pnpm exec playwright test"
   },
   "dependencies": {
     "nuxt": "^3.15.4",
@@ -17,6 +18,7 @@
   },
   "devDependencies": {
     "@nuxt/test-utils": "^3.15.4",
+    "@playwright/test": "^1.50.1",
     "@testing-library/vue": "^8.1.0",
     "@vue/test-utils": "^2.4.6",
     "happy-dom": "^16.8.1",
