--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:20-alpine
+FROM node:20-bookworm-slim
 
 # pnpm をインストール
 RUN npm install -g pnpm
@@ -11,6 +11,10 @@ COPY ../app/package.json ./
 
 # 依存関係をインストール
 RUN pnpm install
+
+# Playwright実行に必要なパッケージをインストール
+RUN pnpm exec playwright install
+RUN pnpm exec playwright install-deps
 
 # アプリケーションのソースコードをコピー
 COPY ../app .
