--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -1,5 +1,8 @@
 {
   // https://nuxt.com/docs/guide/concepts/typescript
   "extends": "./.nuxt/tsconfig.json",
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "compilerOptions": {
+    "typeRoots": ["./types", "./node_modules/@types"]
+  }
 }
